--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Movies</string>
     <string name="title_toprated">Top Rated</string>
     <string name="title_popular">Popular</string>
-    <string name="title_upcoming">Upcoming</string>
+    <string name="title_discover">Discover</string>
     <string name="api_key">fe3b8cf16d78a0e23f0c509d8c37caad</string>
 </resources>
